--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -9,15 +9,15 @@ on:
       destination:
         description: '目标源 (Registry)'
         required: true
-        default: 'registry.cn-beijing.aliyuncs.com'
+        default: 'registry.cn-hangzhou.aliyuncs.com'
       source_repo:
         description: '仓库及标签 (格式 repo:tag)'
         required: true
-        default: ''
+        default: 'nginx:stable'
       destination_repo:
         description: '目标仓库及标签 (格式 repo:tag)'
         required: true
-        default: ''
+        default: 'mlgns/nginx:stable'
 
 jobs:
   copy:
